[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["jamieRowen-mediacom <jamie.owen@essencemediacom.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
